move css to public directory

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>sl-vue-tree</title>
+  <title>sl-vue-tree-next</title>
 </head>
 <body>
 
