--- a/demo/minimal-theme.html
+++ b/demo/minimal-theme.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>sl-vue-tree</title>
-  <link rel="stylesheet" href="../dist/sl-vue-tree-minimal.css">
+  <title>sl-vue-tree-next</title>
+  <link rel="stylesheet" href="../dist/sl-vue-tree-next-minimal.css">
   <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
-  <script src="../dist/sl-vue-tree.js"></script>
+  <script src="../dist/sl-vue-tree-next.js"></script>
 </head>
 <body>
 
 <div id="app">
 
-  <h2> Sl-vue-tree - minimal css</h2>
+  <h2> Sl-vue-tree-next - minimal css</h2>
 
   <a href="./minimal-theme.html" target="_blank">Source code</a>
 
 
   <div class="row">
     <div class="tree-container">
-      <sl-vue-tree v-model="nodes" :show-branches="true"></sl-vue-tree>
+      <sl-vue-tree-next v-model="nodes" :show-branches="true"></sl-vue-tree-next>
     </div>
 
     <div class="json-preview">
