--- a/demo/dark-theme.html
+++ b/demo/dark-theme.html
@@ -5,12 +5,11 @@
         <title>sl-vue-tree-next</title>
         <link rel="stylesheet" href="../dist/sl-vue-tree-next-dark.css" />
         <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-        <script src="../dist/sl-vue-tree-next.js"></script>
+        <script src="https://unpkg.com/vue@3.4.18/dist/vue.global.js"></script>
     </head>
     <body>
         <div id="app" @click="contextMenuIsVisible = false">
-            <h2>sl-vue-tree-next - custom dark theme and events handlers</h2>
+            <h2>Sl-vue-tree-next - custom dark theme and events handlers</h2>
 
             <a href="./dark-theme.html" target="_blank">Source code</a>
             <br /><br />
@@ -56,6 +55,7 @@
                 </div>
 
                 <div class="json-preview">
+                    <h2>JSON Preview</h2>
                     <pre>{{ JSON.stringify(nodes, null, 4)}}</pre>
                 </div>
 
@@ -65,7 +65,9 @@
             </div>
         </div>
 
-        <script>
+        <script type="module">
+            import { SlVueTreeNext } from '../public/sl-vue-tree-next.global.js'
+
             var nodes = [
                 { title: 'Item1', isLeaf: true },
                 { title: 'Item2', isLeaf: true, data: { visible: false } },
@@ -99,9 +101,8 @@
                 },
             ]
 
-            new Vue({
-                el: '#app',
-                components: { SlVueTree },
+            Vue.createApp({
+                components: { SlVueTreeNext },
                 data: function () {
                     return {
                         nodes: nodes,
@@ -153,7 +154,7 @@
                         $slVueTree.remove(paths)
                     },
                 },
-            })
+            }).mount('#app')
         </script>
 
         <style>
