--- a/demo/index.html
+++ b/demo/index.html
@@ -1,14 +1,148 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>sl-vue-tree-next</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>sl-vue-tree-next</title>
+    </head>
+    <body>
+        <div class="tabs">
+            <!-- tab 1 -->
+            <input class="radiotab" name="tabs" tabindex="1" type="radio" id="tabone" checked="checked" />
+            <label class="label" for="tabone">Minimal Theme</label>
+            <div class="panel" tabindex="1">
+                <iframe src="minimal-theme.html" frameborder="0" width="100%" height="1400px"></iframe>
+            </div>
 
-<iframe src="dark-theme.html" frameborder="0" width="100%" height="1400px"></iframe>
-<iframe src="minimal-theme.html" frameborder="0" width="100%" height="1400px"></iframe>
+            <!-- tab 2 -->
+            <input class="radiotab" tabindex="1" name="tabs" type="radio" id="tabtwo" />
+            <label class="label" for="tabtwo">Dark Theme</label>
+            <div class="panel" tabindex="1">
+                <iframe src="dark-theme.html" frameborder="0" width="100%" height="1400px"></iframe>
+            </div>
 
+            <!-- tab 3 -->
+            <input class="radiotab" tabindex="1" name="tabs" type="radio" id="tabthree" />
+            <label class="label" for="tabthree">External Drag</label>
+            <div class="panel" tabindex="1">
+                <iframe src="externaldrag.html" frameborder="0" width="100%" height="1400px"></iframe>
+            </div>
 
-</body>
+            <!-- tab 4 -->
+            <input class="radiotab" tabindex="1" name="tabs" type="radio" id="tabfour" />
+            <label class="label" for="tabfour">Keyboard Control</label>
+            <div class="panel" tabindex="1">
+                <iframe src="keyboardcontrol.html" frameborder="0" width="100%" height="1400px"></iframe>
+            </div>
+        </div>
+    </body>
+
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        *:focus,
+        input:focus + label {
+            outline: none;
+            box-shadow: inset 0 0 0 5px lightBlue;
+        }
+
+        body {
+            padding: 30px 20px;
+            background: #fff;
+            color: #333;
+        }
+
+        main {
+            max-width: 801px;
+            margin: auto;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 0;
+        }
+
+        h2 {
+            margin: 0 0 12px;
+            font-size: 30px;
+        }
+
+        p {
+            margin: 0 0 20px;
+            font-size: 20px;
+            line-height: 1.5;
+        }
+
+        .tabs {
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0 auto 20px;
+            border-radius: 10px 10px 0 0;
+        }
+
+        .radiotab {
+            position: absolute;
+            opacity: 0;
+        }
+
+        .label {
+            width: 100%;
+            padding: 22px 20px;
+            background: #e5e5e5;
+            cursor: pointer;
+            font-weight: bold;
+            font-size: 23px;
+            color: #7f7f7f;
+            transition:
+                background 0.3s,
+                color 0.3s;
+            border: none;
+            border-radius: 0;
+            text-align: center;
+        }
+
+        .label:hover {
+            background: #d8d8d8;
+        }
+
+        .label:active {
+            background: #ccc;
+        }
+
+        .radiotab:checked + .label {
+            background: #fff;
+            color: #000;
+            border-top: solid 2px #000;
+            border-left: solid 2px #000;
+            border-right: solid 2px #000;
+            border-bottom: none;
+        }
+
+        .panel {
+            display: none;
+            padding: 20px 30px 30px;
+            background: #fff;
+            width: 100%;
+            border-left: solid 2px #000;
+            border-bottom: solid 2px #000;
+            border-right: solid 2px #000;
+        }
+
+        .radiotab:checked + .label + .panel {
+            display: block;
+        }
+
+        @media (min-width: 600px) {
+            .panel {
+                order: 99;
+            }
+
+            .label {
+                width: 25%;
+                border-radius: 10px 10px 0 0;
+                border-bottom: solid 2px #000;
+            }
+        }
+    </style>
 </html>
