--- a/demo/keyboardcontrol.html
+++ b/demo/keyboardcontrol.html
@@ -5,8 +5,7 @@
         <title>sl-vue-tree-next</title>
         <link rel="stylesheet" href="../dist/sl-vue-tree-next-dark.css" />
         <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-        <script src="../dist/sl-vue-tree-next.js"></script>
+        <script src="https://unpkg.com/vue@3.4.18/dist/vue.global.js"></script>
     </head>
     <body>
         <div id="app">
@@ -42,7 +41,8 @@
             </div>
         </div>
 
-        <script>
+        <script type="module">
+            import { SlVueTreeNext } from '../public/sl-vue-tree-next.global.js'
             var nodes = [
                 { title: 'Item1', isLeaf: true },
                 { title: 'Item2', isLeaf: true },
@@ -61,9 +61,8 @@
                 { title: 'Item6', isLeaf: true },
             ]
 
-            new Vue({
-                el: '#app',
-                components: { SlVueTree },
+            Vue.createApp({
+                components: { SlVueTreeNext },
                 data: function () {
                     return {
                         nodes: nodes,
@@ -107,7 +106,7 @@
                         }
                     },
                 },
-            })
+            }).mount('#app')
         </script>
 
         <style>
