--- a/demo/minimal-theme.html
+++ b/demo/minimal-theme.html
@@ -4,7 +4,13 @@
         <meta charset="UTF-8" />
         <title>sl-vue-tree</title>
         <link rel="stylesheet" href="../public/sl-vue-tree-next-minimal.css" />
-        <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+            integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <script src="https://unpkg.com/vue@3.4.18/dist/vue.global.js"></script>
     </head>
     <body>
@@ -27,7 +33,7 @@
         <script type="module">
             import { SlVueTreeNext } from '../public/sl-vue-tree-next.global.js'
 
-            var nodes = [
+            const nodes = [
                 { title: 'Item1', isLeaf: true },
                 { title: 'Item2', isLeaf: true, data: { visible: false } },
                 { title: 'Folder1' },
