fix keyboard control issues and expose more props

--- a/demo/keyboardcontrol.html
+++ b/demo/keyboardcontrol.html
@@ -99,7 +99,10 @@
                                 nodeToSelect = slVueTree.getPrevNode(selectedNode.path, (node) => node.isVisible)
                             } else if (keyCode === 'Enter' || keyCode === 'Space') {
                                 if (selectedNode.isLeaf) return
-                                slVueTree.updateNode(selectedNode.path, { isExpanded: !selectedNode.isExpanded })
+                                slVueTree.updateNode({
+                                    path: selectedNode.path,
+                                    patch: { isExpanded: !selectedNode.isExpanded },
+                                })
                             }
 
                             if (!nodeToSelect) return
